Fix layout bug

--- a/frontend/src/sass/primer.scss
+++ b/frontend/src/sass/primer.scss
@@ -39,6 +39,7 @@ $primer-body-padding: 1.2rem !default;
     .primer-container {
         display: flex;
         height: 100%;
+        max-width: 100%;
 
         flex: 1;
     }
